--- a/head.tex
+++ b/head.tex
@@ -66,6 +66,8 @@
 % \renewcommand{\syntleft}{\normalfont\itshape}
 \renewcommand{\syntright}{}
 
+\algnewcommand\ato{\textbf{ to }}
+
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
   \hskip -\arraycolsep
