--- a/exercise6/exercise6.tex
+++ b/exercise6/exercise6.tex
@@ -183,7 +183,7 @@ Optimale Lösung ($\hat{=}$ minimale Kosten) ist $\min \{ \, p[1, 1, r]\ |\ r \i
 				\EndIf\
 			\EndFor\
 			\Statex\
-			\State{\Return{o}}
+			\State{\Return{m}}
 		\EndFunction{}
 	\end{algorithmic}
 \end{algorithm}
